--- a/style.css
+++ b/style.css
@@ -1,15 +1,51 @@
+html {
+  box-sizing: border-box; }
+
 *, *:before, *:after {
-  box-sizing: border-box;
-}
+  box-sizing: inherit; }
 
-
-
-/* ============== */
-/* RESPONSIVENESS */
-/* ============== */
-
-@media only screen and (max-width: 850px) {
-}
-
+#body-sayings .container-btn-sayings {
+  margin: auto;
+  min-width: 300px; }
+#body-sayings .container-sayings {
+  border: 0.15rem solid black;
+  border-radius: 20px;
+  max-width: 600px;
+  width: 100%;
+  margin: 10px auto 40px; }
+#body-sayings .bar {
+  width: 90%; }
+#body-sayings .label {
+  margin: 10px;
+  font-size: 20px;
+  font-weight: bold; }
+#body-sayings .saying {
+  font-style: italic;
+  font-size: 32px;
+  text-align: center;
+  margin-top: 40px auto 40px;
+  min-height: 85px; }
+#body-sayings .btn {
+  display: block;
+  margin: auto;
+  border-radius: 60px;
+  border-color: black;
+  background-color: black;
+  height: 40px;
+  width: 200px;
+  font-weight: bold;
+  font-size: 18px;
+  color: white; }
+#body-sayings .btn:focus {
+  outline: 0; }
+@media only screen and (min-width: 800px) {
+  #body-sayings .btn:hover {
+    cursor: pointer;
+    background-color: white;
+    color: black; } }
 @media only screen and (max-width: 500px) {
-}
+  #body-sayings .saying {
+    font-size: 24px;
+    margin: 24px 10px; } }
+
+/*# sourceMappingURL=style.css.map */
